--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@svgr/webpack": "^5.4.0",
+    "emotion": "^10.0.27",
     "next": "latest",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
