--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.28",
+    "@emotion/styled": "^10.0.27",
     "@svgr/webpack": "^5.4.0",
-    "emotion": "^10.0.27",
     "next": "latest",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "swr": "0.1.18"
+    "swr": "^0.2.0"
   },
   "license": "ISC"
 }
